--- a/css/style.css
+++ b/css/style.css
@@ -5,23 +5,48 @@ body {
     overflow: hidden;
     width: 100%;
     height: 100%;
-    color: rgb(42, 43, 46);
+    color: rgb(36, 36, 36);
     background-color: #c5c5c50f;
+}
+
+canvas {
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0px;
+}
+
+h1 {
+    /* box-shadow: 0px 1px rgba(36, 37, 37, 0.336); */
 }
 
 #g1 {}
 
+.flex {
+    display: flex;
+    flex-direction: row;
+}
+
+.bg {
+    width: 20%;
+    height: 50px;
+}
+
 /* cool color rgba(226, 137, 137, 0.801); */
 #g2 {
-    background-color: #c5c5c562;
+    background: #ffffff15;
+    color: rgba(39, 39, 39, 0.986);
     /* color: rgb(38, 41, 44); */
     padding: 10px;
-    height: 90vh;
+    height: 80vh;
     overflow-y: auto;
+    padding-bottom: 200px;
 }
 
 .container {
     overflow: auto;
+    padding-bottom: 100px;
 }
 
 .flex-span {
@@ -30,6 +55,8 @@ body {
 }
 
 @media screen and (max-width: 480px) {
+
+    canvas,
     .container {
         padding: 4%;
         padding-top: 2%;
@@ -37,6 +64,8 @@ body {
 }
 
 @media screen and (min-width: 481px) {
+
+    canvas,
     .container {
         padding: 8%;
         padding-top: 1%;
